RESOLVED FIXED132177
AX: ARIA 1.1: aria-orientation now defaults to undefined, supported on more elements, and role-specific defaults are defined.
https://bugs.webkit.org/show_bug.cgi?id=132177
Summary AX: ARIA 1.1: aria-orientation now defaults to undefined, supported on more e...
James Craig
Reported 2014-04-25 01:04:19 PDT
AX: ARIA 1.1: aria-orientation now defaults to undefined, supported on more elements, and role-specific defaults are defined. http://rawgit.com/w3c/aria/master/spec/aria.html @aria-orientation is now supported on the following roles (default values per role listed in parens) - combobox (vertical) - listbox (vertical) - menu (vertical) - menubar (horizontal) - radiogroup (undefined) - separator (horizontal) - scrollbar (vertical) - tablist (horizontal) - toolbar (horizontal) - tree (vertical) - treegrid (undefined)
Attachments
patch (15.53 KB, patch)
2015-10-06 12:18 PDT, Nan Wang
no flags
patch (15.92 KB, patch)
2015-10-06 13:54 PDT, Nan Wang
no flags
Radar WebKit Bug Importer
Comment 1 2014-04-25 01:04:51 PDT
Nan Wang
Comment 2 2015-10-06 12:18:09 PDT
chris fleizach
Comment 3 2015-10-06 12:48:47 PDT
Comment on attachment 262534 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=262534&action=review > Source/WebCore/accessibility/AccessibilityRenderObject.cpp:2725 > + if (isScrollbar() these seem short enough they could go on one line > Source/WebCore/accessibility/AccessibilityRenderObject.cpp:2732 > + if (isMenuBar() these seem short enough they could go on one line > LayoutTests/accessibility/mac/aria-orientation.html:78 > + shouldBe("slider2.orientation", "'AXOrientation: '"); it seems like we should probably return a value for undefined
Nan Wang
Comment 4 2015-10-06 13:54:39 PDT
WebKit Commit Bot
Comment 5 2015-10-06 14:46:39 PDT
Comment on attachment 262544 [details] patch Clearing flags on attachment: 262544 Committed r190648: <http://trac.webkit.org/changeset/190648>
WebKit Commit Bot
Comment 6 2015-10-06 14:46:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.