AX: ARIA 1.1: aria-orientation now defaults to undefined, supported on more elements, and role-specific defaults are defined. https://bugs.webkit.org/show_bug.cgi?id=132177

Reviewed by Chris Fleizach.

Source/WebCore:

Added role-specific defaults and changed general default to undefined.
Also added more elements to support aria-orientation on Mac.

Test: accessibility/mac/aria-orientation.html

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::orientation):
(WebCore::AccessibilityObject::isDescendantOfObject):
* accessibility/AccessibilityObject.h:
(WebCore::AccessibilityObject::isColorWell):
(WebCore::AccessibilityObject::isSplitter):
(WebCore::AccessibilityObject::isToolbar):
(WebCore::AccessibilityObject::isChecked):
(WebCore::AccessibilityObject::isEnabled):
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::orientation):
* accessibility/AccessibilityScrollView.cpp:
(WebCore::AccessibilityScrollView::scrollBar):
* accessibility/AccessibilityScrollbar.cpp:
(WebCore::AccessibilityScrollbar::orientation):
(WebCore::AccessibilityScrollbar::isEnabled):
* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper additionalAccessibilityAttributeNames]):
(-[WebAccessibilityObjectWrapper accessibilityAttributeNames]):

LayoutTests:

* accessibility/mac/aria-orientation-expected.txt: Added.
* accessibility/mac/aria-orientation.html: Added.


Canonical link: https://commits.webkit.org/167993@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@190648 268f45cc-cd09-0410-ab3c-d52691b4dbfc